// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InlineCode > should allow ticks to be removed 1`] = `
<code
  class="inline-code"
>
  pnpm install @mlaursen/code
</code>
`;

exports[`InlineCode > should be renderable as a kbd element 1`] = `
<kbd
  class="inline-code inline-code--ticked"
  data-testid="kbd"
>
  Enter
</kbd>
`;

exports[`InlineCode > should render with ticks and as a code element by default 1`] = `
<code
  class="inline-code inline-code--ticked"
>
  pnpm install @mlaursen/code
</code>
`;
